feat(SCRUM-77):implement edzes create from template
